--- a/GroupReport/GroupReport-bibfile.bib
+++ b/GroupReport/GroupReport-bibfile.bib
@@ -18,9 +18,6 @@
   publisher = {IEEE Press},
   address = {Piscataway, NJ, USA},
 } 
-@article{SinofskySteven,
-  author = {Steven,Sinofsky}
-} 
 
 @Article{ Cardin2007,
   author="Cardin, Sylvain and Thalmann, Daniel and Vexo, Fr{\'e}d{\'e}ric",
@@ -117,6 +114,14 @@
   note          = {Accessed: 2016-08-08},
   year          = 2016
 }
+
+@misc{Gear2012,
+  title         = {Supporting sensors in Windows 8},
+  howpublished  = {\url{https://blogs.msdn.microsoft.com/b8/2012/01/24/supporting-sensors-in-windows-8/}},
+  note          = {Accessed: 2016-08-17},
+  author        = {Gear,Gavin},
+  year          = 2012
+} 
 
 @misc{CitiesUnlockedGeneral, 
   title         = {Cities Unlocked website},
