Added goal test to the report and changed the topic interaction for the simulation runner.

--- a/GroupReport/GroupReport-bibfile.bib
+++ b/GroupReport/GroupReport-bibfile.bib
@@ -94,18 +94,26 @@
   month={May}
 }
 
+@misc{OSM,
+  title         = {{OSM} Open Street Maps},
+  howpublished  = {\url{https://www.openstreetmap.org/about}},
+  note          = {Accessed: 2016-08-18},
+  year          = 2016,
+  author        = {Open Street Maps Foundation}
+}
+
 @misc{DARPAGrandChallenge2005,
-  title     = {{DARPA 2005} DARPA Grand Challenge},
-  howpublished = {\url{http://archive.darpa.mil/grandchallenge05/}},
-  note      = {Accessed: 2016-08-05},
-  year      = 2005
+  title         = {{DARPA 2005} DARPA Grand Challenge},
+  howpublished  = {\url{http://archive.darpa.mil/grandchallenge05/}},
+  note          = {Accessed: 2016-08-05},
+  year          = 2005
 }
 
 @misc{DARPAUrbanChallenge2007,
-  title     = {{DARPA 2007} DARPA Urban Challenge},
-  howpublished = {\url{http://archive.darpa.mil/grandchallenge/}},
-  note      = {Accessed: 2016-08-05},
-  year      = 2007
+  title         = {{DARPA 2007} DARPA Urban Challenge},
+  howpublished  = {\url{http://archive.darpa.mil/grandchallenge/}},
+  note          = {Accessed: 2016-08-05},
+  year          = 2007
 }
 
 @misc{NHSBlindStatistics,
